# guidecheck

./: .gitignore  ADOPTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTENT.md  Makefile  PROJECT_CONTEXT.md  README.md  RELEASE_NOTES-0.7.1.md  SECURITY.md  SESSION_HANDOFF.md  assistant-guide.txt  codex-handoff-audit-fixes.md  design-rationale.md  finding-ids.md  operator-guide.md  pyproject.toml  roadmap.md  spec.md  threat-register.md  vercel.json  verifier-conformance.md
.github/: PULL_REQUEST_TEMPLATE.md
.well-known/: security.txt
api/: verify.py
archive/: README.md  assistant-guide-security-summary.md  human-verifiable-plain-text-handoff.md  spec_v1.md  vercel-migration-handoff.md
decisions/: AIDR-0001-same-control-plane-repository-anchors.md
docs/: 0.7-verifier-enforcement-plan.md  404.html  CNAME  a2a-integration.md  acs-integration.md  index.html  level-5-implementation-plan.md  level-5-runtime-conformance.md  llms.txt  mcp-integration.md  pre-level-5-readiness.md  robots.txt  runtime-reason-codes.md  site.webmanifest  sitemap.xml  verifier-examples.html
evals/: README.md
examples/: README.md  anchor.txt  level-3-assistant-guide.txt  manifest.txt  mcp-database-server-assistant-guide.txt
fixtures/: README.md
schemas/: README.md  fixture-expected.schema.json  manifest.schema.json  verifier-output.schema.json
scripts/: check_guide_artifacts.py  check_reference_verifier.py  check_version_sync.py  eval_guidecheck.py  guidecheck_cli.py  guidecheck_constants.py  guidecheck_fetch.py  guidecheck_hosted_anchors.py  guidecheck_scan.py  test_scanner.py  (+9 more)
(+177 files in other folders)
